--- a/client/index.html
+++ b/client/index.html
@@ -8,137 +8,112 @@
     <title>Login</title>
   </head>
   <body>
-    <!-- This example requires Tailwind CSS v2.0+ -->
-    <div class="flex items-center min-h-screen p-4 bg-custom lg:justify-center">
-      <div
-        class="flex flex-col overflow-hidden bg-white-400 rounded-md shadow-lg max md:flex-row md:flex-1 lg:max-w-screen-md"
+    <div
+      class="w-full min-h-screen font-sans text-white-400 bg-gradient-to-br from-black-400 to-teal-400"
+    >
+      <nav
+        class="flex justify-between items-center py-8 px-6 mx-auto max-w-screen-xl md:px-12 lg:px-16 xl:px-24"
       >
+        <a href="#" class="text-3xl md:text-4xl font-bold tracking-wide">
+          <img
+            src="./assets/logo.svg"
+            style="max-width: 120px; max-height: 120px"
+            alt=""
+            srcset=""
+          />
+        </a>
         <div
-          class="p-4 py-6 text-white-400 bg-login-left md:w-80 md:flex-shrink-0 md:flex md:flex-col md:items-center md:justify-evenly"
+          class="inset-0 transition-all bg-white/70 backdrop-blur-xl z-20 md:static md:bg-transparent md:flex items-center justify-center space-y-8 md:space-y-0 md:space-x-8 flex-col md:flex-row lg:space-x-14"
         >
-          <div class="my-3">
-            <img
-              class="logo rounded-full mx-auto"
-              src="./assets/logo.png"
-              alt="logo"
-            />
-          </div>
-          <p class="mt-6 font-normal text-center text-white-400 md:mt-0">
-            With the power of K-WD, you can now focus only on functionaries for
-            your digital products, while leaving the UI design on us!
-          </p>
-          <p
-            class="flex flex-col items-center justify-center mt-10 text-center"
+          <ul
+            class="flex flex-col md:flex-row items-center space-y-6 md:space-y-0 md:space-x-6 lg:md:-x-8 text-white-400"
           >
-            <span>Don't have an account?</span>
-            <a href="#" class="underline">Get Started!</a>
-          </p>
-          <p class="mt-6 text-sm text-center text-gray-300">
-            Read our <a href="#" class="underline">terms</a> and
-            <a href="#" class="underline">conditions</a>
-          </p>
+            <li
+              v-for="menu in menus"
+              class="text-lg md:text-base lg:text-lg font-medium group"
+            >
+              <a
+                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
+                href="#"
+              >
+                About
+              </a>
+            </li>
+            <li
+              v-for="menu in menus"
+              class="text-lg md:text-base lg:text-lg font-medium group"
+            >
+              <a
+                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
+                href="#"
+              >
+                Features
+              </a>
+            </li>
+            <li
+              v-for="menu in menus"
+              class="text-lg md:text-base lg:text-lg font-medium group"
+            >
+              <a
+                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
+                href="#"
+              >
+                Pricing
+              </a>
+            </li>
+          </ul>
+          <button
+            class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors bg-green-400 duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2 font-medium"
+          >
+            Get started
+          </button>
         </div>
-        <div class="p-5 bg-white-400 md:flex-1">
-          <h3 class="my-4 text-2xl font-semibold text-gray-900">
-            Account Login
-          </h3>
-          <form action="#" class="flex flex-col space-y-5">
-            <div class="flex flex-col space-y-1">
-              <label for="email" class="text-sm font-semibold text-gray-500"
-                >Email address</label
-              >
-              <input
-                type="email"
-                id="email"
-                autofocus
-                class="px-4 py-2 transition duration-300 border border-gray-300 rounded focus:border-transparent focus:outline-none focus:ring-4 focus:ring-blue-200"
-              />
-            </div>
-            <div class="flex flex-col space-y-1">
-              <div class="flex items-center justify-between">
-                <label
-                  for="password"
-                  class="text-sm font-semibold text-gray-500"
-                  >Password</label
-                >
-                <a
-                  href="#"
-                  class="text-sm text-blue-600 hover:underline focus:text-blue-800"
-                  >Forgot Password?</a
-                >
-              </div>
-              <input
-                type="password"
-                id="password"
-                class="px-4 py-2 transition duration-300 border border-gray-300 rounded focus:border-transparent focus:outline-none focus:ring-4 focus:ring-blue-200"
-              />
-            </div>
+        <button class="block md:hidden relative z-30"></button>
+      </nav>
 
-            <div>
-              <button
-                type="submit"
-                class="w-full mb-3 px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-teal-400 rounded-md shadow hover:bg-teal-800 focus:outline-none focus:ring-teal-100 focus:ring-2"
-              >
-                Log in
-              </button>
-            </div>
-            <div class="flex flex-col space-y-5">
-              <span class="flex items-center justify-center space-x-2">
-                <span class="h-px bg-gray-400 w-14"></span>
-                <span class="font-normal text-gray-400">or login with</span>
-                <span class="h-px bg-gray-400 w-14"></span>
-              </span>
-              <div class="flex flex-col space-y-4">
-                <a
-                  href="#"
-                  class="flex items-center justify-center px-4 py-2 space-x-2 transition-colors duration-300 border border-gray-800 rounded-md group hover:bg-gray-800 focus:outline-none"
-                >
-                  <span>
-                    <svg
-                      class="w-5 h-5 text-gray-800 fill-current group-hover:text-white-400"
-                      viewBox="0 0 16 16"
-                      version="1.1"
-                      aria-hidden="true"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
-                      ></path>
-                    </svg>
-                  </span>
-                  <span
-                    class="text-sm font-medium text-gray-800 group-hover:text-white-400"
-                    >Github</span
-                  >
-                </a>
-                <a
-                  href="#"
-                  class="flex items-center justify-center px-4 py-2 space-x-2 transition-colors duration-300 border border-red-400 rounded-md group hover:bg-red-500 focus:outline-none"
-                >
-                  <span>
-                    <svg
-                      class="text-red-400 group-hover:text-white-400"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      stroke-width="2"
-                      stroke="currentColor"
-                      fill="none"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                      <path stroke="none" d="M0 0h24v24H0z" />
-                      <path d="M17.788 5.108A9 9 0 1021 12h-8" />
-                    </svg>
-                  </span>
-                  <span
-                    class="text-sm font-medium text-red-400 group-hover:text-white-400"
-                    >Google</span
-                  >
-                </a>
-              </div>
-            </div>
-          </form>
+      <div
+        class="flex flex-wrap-reverse gap-y-24 justify-between py-12 px-6 mx-auto max-w-screen-xl sm:px-8 md:px-12 lg:px-16 xl:px-24"
+      >
+        <div class="relative z-10 md:w-1/2 w-full">
+          <span class="flex items-center px-1 text-xl text-green">
+            <span class="font-medium">Lorem ipsum dolor sit.</span>
+          </span>
+          <h1
+            class="pt-4 text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tighter leading-tight whitespace-nowrap"
+          >
+            Lorem, ipsum<br />
+            Lorem, ipsum <br />
+            <span class="whitespace-nowrap text-green"> unfair advantage </span>
+          </h1>
+          <p
+            class="pt-8 sm:text-lg max-w-md font-normal text-gray-400 leading-relaxed"
+          >
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
+            aspernatur eaque h!
+          </p>
+          <div class="flex pt-8 space-x-4 sm:space-x-6">
+            <button
+              class="w-full mb-3 px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-yellow-400 rounded-md shadow hover:bg-yellow-500 focus:outline-none focus:ring-teal-100 focus:ring-2"
+            >
+              Get started
+            </button>
+            <button
+              class="mb-3 w-full px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-teal-400 rounded-md shadow hover:bg-teal-800 focus:outline-none focus:ring-teal-100 focus:ring-2"
+            >
+              Explore menu
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="relative md:w-1/2 w-full flex flex-col justify-between"
+          style="margin-top: -3rem"
+        >
+          <img
+            class="w-96 lg:w-full drop-shadow-2xl self-center lg:self-end"
+            src="/img/doctor2.png"
+            alt=""
+          />
         </div>
       </div>
     </div>
