--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>DementAI</title>
   </head>
   <body>
     <div
@@ -25,47 +25,11 @@
         <div
           class="inset-0 transition-all bg-white/70 backdrop-blur-xl z-20 md:static md:bg-transparent md:flex items-center justify-center space-y-8 md:space-y-0 md:space-x-8 flex-col md:flex-row lg:space-x-14"
         >
-          <ul
-            class="flex flex-col md:flex-row items-center space-y-6 md:space-y-0 md:space-x-6 lg:md:-x-8 text-white-400"
-          >
-            <li
-              v-for="menu in menus"
-              class="text-lg md:text-base lg:text-lg font-medium group"
-            >
-              <a
-                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
-                href="#"
-              >
-                About
-              </a>
-            </li>
-            <li
-              v-for="menu in menus"
-              class="text-lg md:text-base lg:text-lg font-medium group"
-            >
-              <a
-                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
-                href="#"
-              >
-                Features
-              </a>
-            </li>
-            <li
-              v-for="menu in menus"
-              class="text-lg md:text-base lg:text-lg font-medium group"
-            >
-              <a
-                class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2"
-                href="#"
-              >
-                Pricing
-              </a>
-            </li>
-          </ul>
+        
           <button
             class="w-full mb-3 px-4 py-2 text-lg font-semiboldbg-green-400 transition-colors bg-green-400 duration-300 rounded-md shadow hover:bg-green-400 focus:outline-none focus:ring-blue-100 focus:ring-2 font-medium"
           >
-            Get started
+           Login
           </button>
         </div>
         <button class="block md:hidden relative z-30"></button>
@@ -76,31 +40,23 @@
       >
         <div class="relative z-10 md:w-1/2 w-full">
           <span class="flex items-center px-1 text-xl text-green">
-            <span class="font-medium">Lorem ipsum dolor sit.</span>
+          
           </span>
           <h1
             class="pt-4 text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tighter leading-tight whitespace-nowrap"
           >
-            Lorem, ipsum<br />
-            Lorem, ipsum <br />
-            <span class="whitespace-nowrap text-green"> unfair advantage </span>
+            <span class="whitespace-nowrap text-green"> DementAI</span>
           </h1>
           <p
             class="pt-8 sm:text-lg max-w-md font-normal text-gray-400 leading-relaxed"
           >
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
-            aspernatur eaque h!
+          DementAI is a web-based platform that helps users to determine whether they are having dementia or not by asking certain questions
           </p>
           <div class="flex pt-8 space-x-4 sm:space-x-6">
             <button
-              class="w-full mb-3 px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-yellow-400 rounded-md shadow hover:bg-yellow-500 focus:outline-none focus:ring-teal-100 focus:ring-2"
+              class="w-36 mb-3 px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-yellow-400 rounded-md shadow hover:bg-yellow-500 focus:outline-none focus:ring-teal-100 focus:ring-2"
             >
               Get started
-            </button>
-            <button
-              class="mb-3 w-full px-4 py-2 text-lg font-semibold text-white-400 transition-colors duration-300 bg-teal-400 rounded-md shadow hover:bg-teal-800 focus:outline-none focus:ring-teal-100 focus:ring-2"
-            >
-              Explore menu
             </button>
           </div>
         </div>
