--- a/client/login.html
+++ b/client/login.html
@@ -105,13 +105,9 @@
                       ></path>
                     </svg>
                   </span>
-                  <span
-                    class="text-sm font-medium text-gray-800 group-hover:text-white-400"
-                    >Github</span
-                  >
                 </a>
                 <a
-                  href="#"
+                  href="http://localhost:3001/login"
                   class="flex items-center justify-center px-4 py-2 space-x-2 transition-colors duration-300 border border-red-400 rounded-md group hover:bg-red-500 focus:outline-none"
                 >
                   <span>
